delete icon and get icons even if there is no size

--- a/popup.html
+++ b/popup.html
@@ -20,5 +20,10 @@
 <p>Name of icon</p>
 <input type="text" id="NameOfIcon">
 <button id="saveIconBtn">Save</button>
+<h2>Delete Icons</h2>
+<select id="iconToDeleteInput">
+    <option value=""></option>
+</select>
+<button id="deleteIconBtn">Delete</button>
 </body>
 </html>
