--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
     <option value=""></option>
  </select>
 <button id="changeTabPropertiesBtn">Change</button>
+<button id="removeCurrentIconBtn">RemoveIcon</button>
 <h2>Save current tab's icon</h2>
 <p>Name of icon</p>
 <input type="text" id="NameOfIcon">
