--- a/popup.html
+++ b/popup.html
@@ -35,8 +35,11 @@
     <select id="iconInput">
         <option value=""></option>
     </select>
+    <p>Or pick an emoji</p>
+    <input type="text" id="emojiInput">
     <button id="changeTabPropertiesBtn">Change</button>
-    <button id="removeCurrentIconBtn">RemoveIcon</button>
+
+<!--    <button id="removeCurrentIconBtn">RemoveIcon</button>-->
 </div>
 
 <div id="saveTab" class="tab-content">
