--- a/popup.html
+++ b/popup.html
@@ -6,57 +6,13 @@
     <title>Tab Title and Icon Changer</title>
     <script src="popup.js"></script>
     <script src="openEmoji.js"></script>
-    <style>
-        em{
-            font-weight: lighter;
-        }
-        .tab-content {
-            display: none;
-        }
-        .tab-content.active {
-            display: block;
-        }
-       .tab{
-           display: flex;
-           flex-direction: row;
-           width: 100%;
-           min-width: 300px;
-       }
-       .tablinks{
-              width: 50%;
-              padding: 10px;
-              text-align: center;
-              background-color: #f1f1f1;
-              border: 1px solid #ccc;
-              cursor: pointer;
-       }
-       .tablinks.active{
-           background-color: #ccc;
-       }
-       .submitButtonDiv{
-              display: flex;
-                justify-content: center;
-           align-items: center;
-           margin-top: 20px;
-       }
-       .submitBtn{
-       /*style submit button*/
-        width: 100px;
-        height: 30px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-           
-       }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Tabs Stylers</h1>
 <div class="tab">
     <button class="tablinks active" name="changeTab">Change current tab</button>
-    <button class="tablinks" name="saveTab">Manage Icons</button>
+    <button class="tablinks" name="manageIcons">Manage Icons</button>
 </div>
 
 <div id="changeTab" class="tab-content active">
@@ -68,24 +24,27 @@
         </br>
     <em id="OSOpenEmojiInstructions">(Press <b>Win</b> + <b>.</b> or <b>Cmd</b> + <b>Ctrl</b> + <b>Space</b> to open the emoji picker)</em>
     </p>
-    <input type="text" id="emojiInput" size="5" maxlength="2" placeholder="emoji" >
-    <select id="iconInput">
+    <input type="text" id="emojiInput" class="emoji" >
+    <select id="iconSelector">
     </select>
     <div class="submitButtonDiv">
     <button id="changeTabPropertiesBtn" class="submitBtn">Change</button>
     </div>
 </div>
 
-<div id="saveTab" class="tab-content">
-    <h2>Save current tab's icon</h2>
-    <p>Name of icon</p>
-    <input type="text" id="NameOfIcon">
-    <button id="saveIconBtn">Save</button>
-    <h2>Delete Icons</h2>
-    <select id="iconToDeleteInput">
-        <option value=""></option>
-    </select>
-    <button id="deleteIconBtn">Delete</button>
+<div id="manageIcons" class="tab-content">
+    <script src="manageIcons.js"></script>
+    <h2>Manage Icons</h2>
+    <input type="text" id="AddNewIcon"/>
+    <ul id="listOfIcons">
+        
+    </ul>
+<!--    <input type="text" id="NameOfIcon">-->
+<!--    <button id="saveIconBtn" class="submitBtn">Save</button>-->
+<!--    <select id="iconToDeleteInput">-->
+<!--        <option value=""></option>-->
+<!--    </select>-->
+<!--    <button id="deleteIconBtn">Delete</button>-->
 </div>
 
 
