reset tab button. add new icon in same list

--- a/popup.html
+++ b/popup.html
@@ -29,22 +29,14 @@
     </select>
     <div class="submitButtonDiv">
     <button id="changeTabPropertiesBtn" class="submitBtn">Change</button>
+        <button id="resetIconBtn" class="cancelBtn">Reset</button>
     </div>
 </div>
 
 <div id="manageIcons" class="tab-content">
     <script src="manageIcons.js"></script>
     <h2>Manage Icons</h2>
-    <input type="text" id="AddNewIcon"/>
-    <ul id="listOfIcons">
-        
-    </ul>
-<!--    <input type="text" id="NameOfIcon">-->
-<!--    <button id="saveIconBtn" class="submitBtn">Save</button>-->
-<!--    <select id="iconToDeleteInput">-->
-<!--        <option value=""></option>-->
-<!--    </select>-->
-<!--    <button id="deleteIconBtn">Delete</button>-->
+    <ul id="listOfIcons"></ul>
 </div>
 
 
