added random tab generator. and the setTabProperties

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Tabs Stylers</h1>
+<div class=container">
+    <h1>Tabs Stylers</h1>
 <div class="tab">
     <button class="tablinks active" name="changeTab">Change current tab</button>
     <button class="tablinks" name="manageIcons">Manage Icons</button>
@@ -39,6 +40,6 @@
     <ul id="listOfIcons"></ul>
 </div>
 
-
+</div>
 </body>
 </html>
