--- a/popup.html
+++ b/popup.html
@@ -12,14 +12,20 @@
 <div class="container">
     <h1>Customise your tab 🎨</h1>
     <p class="openEmojiInstructionsText">
-    <em id="OSOpenEmojiInstructions">(Press <b>Win</b> + <b>.</b> or <b>Cmd</b> + <b>Ctrl</b> + <b>Space</b> to open the emoji picker)</em>
+    <em id="OSOpenEmojiInstructions">(Press <b>Win</b> + <b>.</b> or <b>Cmd</b> + <b>Ctrl</b> + <b>Space</b><br/> to open the emoji picker)</em>
     </p>
-
+<div class="row-of-tab-emulators">
+    <div class="tab-emulator tab-emulator-aux left" >
+    </div>
     <div class="tab-emulator">
         <div class="icon" contenteditable="true" id="tab-emulator-emoji"></div>
         <div class="title-input" contenteditable="true" id="tab-emulator-title" ></div>
         <div class="cross" id="tab-emulator-cross">✕</div>
     </div>
+    <div class="tab-emulator tab-emulator-aux right">
+    </div>
+</div>
+    <div class="tab-emulator-footer"></div>
     <p id="errorMessage" class="errorMessage"></p>
     <div class="submitButtonDiv">
     <button id="randomTabBtn" class="randomTabBtn">🔀</button>
