clean storage after tab is removed. tooltip to show that the cross is to reset removed reset button. cleaned css not used

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,9 @@
     <div class="tab-emulator">
         <div class="icon" contenteditable="true" id="tab-emulator-emoji"></div>
         <div class="title-input" contenteditable="true" id="tab-emulator-title" ></div>
-        <div class="cross" id="tab-emulator-cross">✕</div>
+        <div class="cross" id="tab-emulator-cross">✕
+            <span class="tooltiptext">reset</span>
+        </div>
     </div>
     <div class="tab-emulator tab-emulator-aux right">
     </div>
@@ -29,7 +31,6 @@
     <p id="errorMessage" class="errorMessage"></p>
     <div class="submitButtonDiv">
     <button id="randomTabBtn" class="randomTabBtn">🔀</button>
-        <button id="resetIconBtn" class="cancelBtn">Reset</button>
     </div>
 </div>
 </body>
